--- a/src/pages/Editor/Layouts/Artboard/Artboard.module.scss
+++ b/src/pages/Editor/Layouts/Artboard/Artboard.module.scss
@@ -10,6 +10,7 @@
 .templateInfo {
   padding: 1.5rem;
   background-color: var(--post-review-bg);
+  --rt-color-dark: var(--post-review-bg)
 }
 .templateInfoButton {
   background-color: var(--primary);
