--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,7 +28,7 @@ $color-scheme: (
                 appearance-mode-border-color: #21262d,
                 appearance-mode-body-bg-color: #161b22,
                 appearance-mode-body-color: #D7D7E7,
-                scrollbar-bg-color: #eeeeee,
+                scrollbar-bg-color: #161b22,
                 fields-group-bg-color: #161b22,
                 setting-group-border-color: #30363d,
                 setting-group-title-color: #D7D7E7,
